--- a/index.html
+++ b/index.html
@@ -4,8 +4,31 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Caring Buddies</title>
+    <!--STYLING REMOVE THIS LATER-->
+    <style>
+      body,
+      html {
+        height: 100%;
+        margin: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-family: "Roboto", sans-serif;
+      }
+
+      .under {
+        text-align: center;
+      }
+
+      .under h1 {
+        font-size: 3em; /* Adjust as needed */
+        text-transform: uppercase;
+      }
+    </style>
   </head>
   <body>
-    <h1>Under Construction! Please wait</h1>
+    <div class="under">
+      <h1>Under Construction! Please wait</h1>
+    </div>
   </body>
 </html>
